Log deletion and java 17 compatability, 3.1.4 spring